# deep-research-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
framework/: loop.py  tools.py
scripts/: 01_fetch.py  02_parse.py  03_chunk.py  04_contextualize.py  05_load.py  m2_simplest_agent.py  m3_tool_schemas.py  m4_tool_registry.py  m5_loop.py  pipeline.py  smoke_groq.py  smoke_qdrant.py  sync_corpus.py  test_orchestrator.py  test_paper_summarizer.py  test_retrieval.py  test_search_agent.py  test_subagent.py
src/: config.py  embeddings.py  observability.py  qdrant_setup.py  retrieval.py
src/agents/: mcp_tools.py  orchestrator.py  paper_summarizer.py  schemas.py  search_agent.py  subagent.py  tools.py
src/ingest/: chunker.py  contextualizer.py  fetch_arxiv.py  loader.py  parse_pdf.py
src/llm/: anthropic_client.py  client.py  groq_client.py  prompts.py
src/mcp_server/: server.py
src/tools/: retrieval.py
