[project]
name = "deep-research-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "arxiv>=3.0.0",
    "fastembed>=0.8.0",
    "groq>=1.2.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.5.1",
    "langgraph>=1.1.9",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
